# MSL

./: .gitignore  .gitmodules
MSL/: CMakeLists.txt  CMakeSettings.json
MSL/linter/: main.cpp
MSL/msl/: MSL.h  Serializer.h
MSL/src/: MSL.cpp  Serializer.cpp
MSL/tests/: main.cpp
MSLParser/: MSLParser.sln
MSLParser/Debug/: MSLTest.exp
MSLParser/MSLParser/: MSLParser.cpp  MSLParser.vcxproj  MSLParser.vcxproj.filters  ReadMe.txt  stdafx.cpp
MSLParser/MSLTest/: MSLTest.vcxproj  MSLTest.vcxproj.filters  MSLTest1.cpp
MSLParser/MSLTest/Debug/MSLTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MSLTest.lastbuildstate  MSLTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MSLParser/MSLTest/MSL/: MSL.cpp  MSL.h
MSLParserTest/MSLTest/: MSLTest.vcxproj  MSLTest.vcxproj.filters  MSLTest1.cpp  stdafx.cpp
